Bug 411846 - captive portal detection notification not managed
Summary: captive portal detection notification not managed
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-12 09:08 UTC by Harald Sitter
Modified: 2024-12-23 18:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2019-09-12 09:08:46 UTC
the captive portal notification is not managed and simply stays there forever. this results in a number of awkward ways the 


STEPS TO REPRODUCE
1. be behind portal
2. have nm properly set up to detect limited connectivity
3. get notification upon connecting

OBSERVED RESULT
when disconnecting from the wifi connection that caused the portal and connecting to another one the notification prompting me to log in stays around even though no longer applicable

EXPECTED RESULT
notification goes away
Comment 1 Jan Grulich 2019-12-17 09:47:48 UTC
Git commit 1ffef126b8f0b8ca58ee88cc2e3d235a51dbf288 by Jan Grulich.
Committed on 17/12/2019 at 09:47.
Pushed by grulich into branch 'master'.

Captive portal notification improvements

Summary:
Do not duplicate captive portal notifications and close them when we are no longer
behind captive portal.
Related: bug 411847

Reviewers: ngraham, broulik, #plasma

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26042

M  +34   -11   kded/portalmonitor.cpp
M  +4    -0    kded/portalmonitor.h

https://commits.kde.org/plasma-nm/1ffef126b8f0b8ca58ee88cc2e3d235a51dbf288
Comment 2 Ben Cooksley 2024-12-23 18:23:39 UTC
Bulk transfer as requested in T17796