Captive portal notification improvements

Summary:
Do not duplicate captive portal notifications and close them when we are no longer
behind captive portal.

BUG: 411846
BUG: 411847

Reviewers: ngraham, broulik, #plasma

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26042